<?xml version="1.0"?>
<package>
  <name>dlut_monitor</name>
  <version>0.1.0</version>
  <description>

     dlut_monitor

  </description>
  <maintainer email="wnl@gmail.com">wnl</maintainer>
  <author>wnl</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>opencv_core</build_depend>
  <build_depend>opencv_highgui</build_depend>
  <build_depend>opencv_imgproc</build_depend>
  <build_depend>GLU</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>opencv_core</run_depend>
  <run_depend>opencv_highgui</run_depend>
  <run_depend>opencv_imgproc</run_depend>
  <run_depend>GLU</run_depend>
  <run_depend>dadasdasdasdassssssssssss</run_depend>
  adawd
</package>
